--- a/instance.cfg
+++ b/instance.cfg
@@ -1,20 +1,12 @@
 [General]
-AutoCloseConsole=false
 AutomaticJava=true
-CloseAfterLaunch=false
 ConfigVersion=1.2
-CustomGLFWPath=
-CustomOpenALPath=
-EnableFeralGamemode=false
-EnableMangoHud=false
-Env=@Variant(\0\0\0\b\0\0\0\0)
 ExportAuthor=Bob Varioa
 ExportName=
 ExportOptionalFiles=true
 ExportSummary=
 ExportVersion=1.0.0
 IgnoreJavaCompatibility=false
-InstanceAccountId=
 InstanceType=OneSix
 JavaArchitecture=64
 JavaPath=/home/bob/.local/share/PrismLauncher/java/java-runtime-gamma/bin/java
@@ -23,10 +15,6 @@ JavaSignature=a73e62c0c91d6f9161844e0daa4a2c74a8f02696
 JavaVendor=Microsoft
 JavaVersion=17.0.8
 JoinServerOnLaunch=false
-JoinServerOnLaunchAddress=
-JoinWorldOnLaunch=
-JvmArgs=
-LaunchMaximized=false
 LogPrePostOutput=true
 ManagedPack=false
 ManagedPackID=
@@ -34,12 +22,7 @@ ManagedPackName=
 ManagedPackType=
 ManagedPackVersionID=
 ManagedPackVersionName=
-MaxMemAlloc=4096
-MinMemAlloc=512
-MinecraftWinHeight=480
-MinecraftWinWidth=854
-OnlineFixes=false
-OverrideCommands=false
+OverrideCommands=true
 OverrideConsole=false
 OverrideEnv=false
 OverrideGameTime=false
@@ -51,20 +34,10 @@ OverrideMiscellaneous=false
 OverrideNativeWorkarounds=false
 OverridePerformance=false
 OverrideWindow=false
-PermGen=128
 PostExitCommand=
-PreLaunchCommand=
+PreLaunchCommand=cmd  /c packwiz-install install https://raw.githubusercontent.com/BobVarioa/frens-pack/refs/heads/main/minecraft/pack.toml
 Profiler=
-QuitAfterGameStop=false
-RecordGameTime=true
-ShowConsole=false
-ShowConsoleOnError=true
-ShowGameTime=true
 UseAccountForInstance=false
-UseDiscreteGpu=false
-UseNativeGLFW=false
-UseNativeOpenAL=false
-UseZink=false
 WrapperCommand=
 iconKey=default
 lastLaunchTime=1746529398662
