--- a/instance.cfg
+++ b/instance.cfg
@@ -35,17 +35,14 @@ OverrideNativeWorkarounds=false
 OverridePerformance=false
 OverrideWindow=false
 PostExitCommand=
-PreLaunchCommand=cmd  /c packwiz-install install https://raw.githubusercontent.com/BobVarioa/frens-pack/refs/heads/main/minecraft/pack.toml
+PreLaunchCommand=cmd  /c ../packwiz-install.exe install https://raw.githubusercontent.com/BobVarioa/frens-pack/refs/heads/main/minecraft/pack.toml
 Profiler=
 UseAccountForInstance=false
 WrapperCommand=
 iconKey=default
-lastLaunchTime=1746529398662
-lastTimePlayed=27
 linkedInstances=[]
 name=frens pack 2 (real) (notclickbait)
 notes=
-totalTimePlayed=4078
 
 [UI]
 mods_Page\Columns=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x5\x1\0\0\0\0\0\0\0\0\0\0\0\v\x80\a\0\0\0\x4\0\0\0\a\0\0\0\x64\0\0\0\t\0\0\0\x64\0\0\0\b\0\0\0\x64\0\0\0\n\0\0\0\x64\0\0\x3\xc9\0\0\0\v\x1\x1\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\v\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x1q\0\0\0\x1\0\0\0\x1\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\x64\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x1)
