--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ minecraft/mods/.index
 minecraft/mods/.connector
 minecraft/mods/*.jar
 !minecraft/mods/ThirstWasTaken-*.jar
+minecraft/.pw-install
