remember how windows paths work

--- a/instance.cfg
+++ b/instance.cfg
@@ -35,7 +35,7 @@ OverrideNativeWorkarounds=false
 OverridePerformance=false
 OverrideWindow=false
 PostExitCommand=
-PreLaunchCommand=cmd  /c ../packwiz-install.exe install https://raw.githubusercontent.com/BobVarioa/frens-pack/refs/heads/main/minecraft/pack.toml
+PreLaunchCommand=cmd  /c ..\packwiz-install.exe install https://raw.githubusercontent.com/BobVarioa/frens-pack/refs/heads/main/minecraft/pack.toml
 Profiler=
 UseAccountForInstance=false
 WrapperCommand=
