ignore config because they are irrelevant anyways i'll whitelist configs i actually change anyways

--- a/minecraft/.packwizignore
+++ b/minecraft/.packwizignore
@@ -25,5 +25,4 @@ mods/.index
 mods/.connector
 mods/*.jar
 .pw-install
-config/fabric/indigo-renderer.properties
-config/watut-item-arm-adjustments.json
+config
