--- a/minecraft/mods/tinker-delight.pw.toml
+++ b/minecraft/mods/tinker-delight.pw.toml
@@ -3,11 +3,6 @@ filename = "tinkersdelight-1.2.0-forge-1.20.1.jar"
 side = "both"
 
 [download]
+url = "https://github.com/BobVarioa/frens-pack/raw/refs/heads/main/minecraft/mods/tinkersdelight-1.2.0-forge-1.20.1.jar"
 hash-format = "sha1"
 hash = "2814bae8de4ffc93ea580d45e0c39226a2423161"
-mode = "metadata:curseforge"
-
-[update]
-[update.curseforge]
-file-id = 6169637
-project-id = 1005386
