install from url, again

--- a/minecraft/resourcepacks/create-pipez.pw.toml
+++ b/minecraft/resourcepacks/create-pipez.pw.toml
@@ -5,9 +5,4 @@ side = "both"
 [download]
 hash-format = "sha1"
 hash = "beb8333c34b897f1e5dfd0a607753ac73d66e4b9"
-mode = "metadata:curseforge"
-
-[update]
-[update.curseforge]
-file-id = 4691998
-project-id = 901091
+url =  "https://github.com/BobVarioa/frens-pack/raw/refs/heads/main/minecraft/resourcepacks/Lopy-Create-Pipez.zip"
