--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ minecraft/mods/.connector
 minecraft/mods/*.jar
 !minecraft/mods/ThirstWasTaken-*.jar
 !minecraft/mods/tinkersdelight-*.jar
+!minecraft/mods/fluidtrash-*.jar
 minecraft/.pw-install
 minecraft/config/**/**.*
 !minecraft/config/apotheosis/apotheosis.cfg
