fix origins and sophisticated storage compatibility

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ minecraft/mods/*.jar
 !minecraft/mods/ThirstWasTaken-*.jar
 !minecraft/mods/tinkersdelight-*.jar
 !minecraft/mods/fluidtrash-*.jar
+!minecraft/mods/originsophfix-*.jar
 minecraft/.pw-install
 minecraft/config/**/**.*
 !minecraft/config/apotheosis/apotheosis.cfg
