--- a/minecraft/mods/create-enchantable-machinery.pw.toml
+++ b/minecraft/mods/create-enchantable-machinery.pw.toml
@@ -1,5 +1,5 @@
 name = 'Create: Enchantable Machinery'
-filename = 'createenchantablemachinery-3.4.0+mc1.20.1-forge.jar'
+filename = 'createenchantablemachinery-3.4.0-mc1.20.1-forge.jar'
 side = 'both'
 
 [download]
